@@ -1,3 +1,14 @@
+2017-08-20 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Expression undo/redo
+
+2017-08-19 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fixed custom font sizes
+	* Default to a larger font size
+	* Use '×' (00D6) as default mulitplication sign and add middle dot as alternative multiplication sign (both present in more fonts than the true multiplication dot)
+	* Fixed/enhanced matrix/vector editing
+
 2017-08-18 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Use glib-compile-resources for ui files (makes it easier to relocate or run the application without installing)
